# simdxml-python

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: bench_parse.py
python/simdxml/: __init__.py  _core.pyi
python/simdxml/etree/: ElementTree.py  __init__.py
src/: lib.rs
tests/: conftest.py  test_batch.py  test_edge_cases.py  test_element.py  test_et_compat.py  test_et_dropin.py  test_et_streaming.py  test_lxml_compat.py  test_parse.py  test_property.py  test_readonly.py  test_xpath_native.py
